[workspace]
members = [
    "ai-assistant",
    "buddy-manager",
    "calculator",
    "development-timer",
    "file-organizer",
    "password-manager",
    "password-generator",
    "task-manager",
    "word-analyzer",
]

default-members = [
    "buddy-manager"
]

[workspace.dependencies]
chrono = "0.4"
dotenv = "0.15"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.29"
serde = { version = "1.0", features = ["derive"] }
termion = "2"
time = "0.3"
tokio = { version = "1.29", features = ["full"] }

[alias]
run = "run --bin buddy-manager"