[workspace]
members = [
    "./ai_assistant",
    "./buddy_manager",
    "./calculator",
    "./development_timer",
    "./file_organizer",
    "./password_manager",
    "./password_generator",
    "./task_manager",
    "./word_analyzer",
]

default-members = [
    "./buddy_manager"
]

workspace.resolver = "2"

[workspace.dependencies]
chrono = "0.4"
dotenv = "0.15"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.30"
serde = { version = "1.0", features = ["derive"] }
termion = "3"
time = "0.3"
tokio = { version = "1.29", features = ["full"] }