[package]
name = "ai-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
termion = "1.5.6"
tokio = { version = "1.15.0", features = ["full"] }