[package]
name = "ai-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy-utils = { path = "../buddy-utils" }
dotenv = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
termion = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "ai-assistant"
path = "src/main.rs"