[package]
name = "buddy-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy-utils = { path = "../buddy-utils" }
chrono = { workspace = true }
termion = { workspace = true }
rusqlite = { workspace = true }
