[package]
name = "buddy_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_service = { path = "../buddy_service" }
chrono = { workspace = true }
termion = { workspace = true }
rusqlite = { workspace = true }
