[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_service = { path = "../buddy_service" }
termion = { workspace = true }

[[bin]]
name = "calculator"
path = "src/main.rs"