[package]
name = "development-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy-utils = { path = "../buddy-utils" }
termion = "2"
time = "0.3"


[[bin]]
name = "development-timer"
path = "src/main.rs"