[package]
name = "development-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy-utils = { path = "../buddy-utils" }
termion = { workspace = true }
time = { workspace = true }


[[bin]]
name = "development-timer"
path = "src/main.rs"