[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rusqlite = { workspace = true }
termion = { workspace = true }

[[bin]]
name = "password-manager"
path = "src/main.rs"