[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy-utils = { path = "../buddy-utils" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "task-manager"
path = "src/main.rs"