[package]
name = "task-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy-utils = { path = "../buddy-utils" }
chrono = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
termion = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "task-manager"
path = "src/main.rs"